--- a/QuestPackages/daily/schedules/package.yml
+++ b/QuestPackages/daily/schedules/package.yml
@@ -8,8 +8,8 @@ events:
   announceResetDaily: notifyall &eDaily Quests reset!
   resetDaily: folder farmingReset,fishingReset,lumberReset,miningReset,mobkillReset period:5
 
-  farmingReset: folder daily-farming-level1-beetroot.reset,daily-farming-level1-carrot.reset,daily-farming-level1-potato.reset,daily-farming-level1-sugarcane.reset,daily-farming-level1-wheat.reset,daily-farming-level2-bamboo.reset,daily-farming-level2-cactus.reset,daily-farming-level2-melon.reset,daily-farming-level2-pumpkin.reset,daily-farming-level2-sweetberry.reset
-  fishingReset: folder daily-fishing-level1-cod.reset,daily-fishing-level1-puffer.reset,daily-fishing-level1-salmon.reset,daily-fishing-level1-shell.reset,daily-fishing-level1-tropical.reset,daily-fishing-level2-cod.reset,daily-fishing-level2-puffer.reset,daily-fishing-level2-salmon.reset,daily-fishing-level2-shell.reset,daily-fishing-level2-tropical.reset
-  lumberReset: folder daily-lumber-level1-birch.reset,daily-lumber-level1-crimson.reset,daily-lumber-level1-darkoak.reset,daily-lumber-level1-oak.reset,daily-lumber-level1-spruce.reset,daily-lumber-level2-birch.reset,daily-lumber-level2-crimson.reset,daily-lumber-level2-darkoak.reset,daily-lumber-level2-oak.reset,daily-lumber-level2-spruce.reset
-  miningReset: folder daily-mining-level1-diamondOre.reset,daily-mining-level1-goldOre.reset,daily-mining-level1-ironOre.reset,daily-mining-level1-obsidian.reset,daily-mining-level1-quartzOre.reset,daily-mining-level2-diamondOre.reset,daily-mining-level2-goldOre.reset,daily-mining-level2-ironOre.reset,daily-mining-level2-obsidian.reset,daily-mining-level2-quartzOre.reset
-  mobkillReset: folder daily-mobkill-level1-creeper.reset,daily-mobkill-level1-pig.reset,daily-mobkill-level1-skeleton.reset,daily-mobkill-level1-spider.reset,daily-mobkill-level1-zombie.reset,daily-mobkill-level2-creeper.reset
+  farmingReset: folder daily-farming-bamboo.reset,daily-farming-beetroot.reset,daily-farming-cactus.reset,daily-farming-carrot.reset,daily-farming-melon.reset,daily-farming-potato.reset,daily-farming-pumpkin.reset,daily-farming-sugarcane.reset,daily-farming-sweetberry.reset,daily-farming-wheat.reset
+  fishingReset: folder daily-fishing-cod.reset,daily-fishing-puffer.reset,daily-fishing-salmon.reset,daily-fishing-shell.reset,daily-fishing-tropical.reset
+  lumberReset: folder daily-lumber-birch.reset,daily-lumber-crimson.reset,daily-lumber-darkoak.reset,daily-lumber-oak.reset,daily-lumber-spruce.reset
+  miningReset: folder daily-mining-diamondOre.reset,daily-mining-goldOre.reset,daily-mining-ironOre.reset,daily-mining-obsidian.reset,daily-mining-quartzOre.reset
+  mobkillReset: folder daily-mobkill-creeper.reset,daily-mobkill-pig.reset,daily-mobkill-skeleton.reset,daily-mobkill-spider.reset,daily-mobkill-zombie.reset
